--- a/.github/workflows/check-broken-links.yml
+++ b/.github/workflows/check-broken-links.yml
@@ -6,7 +6,7 @@ on:
  pull_request:
     branches:
       - main # Modify if you use a different main branch name, such as the legacy "master" name.
-      
+
 env:
   WEBSITE_URL: "https://haystack.deepset.ai"
   ISSUE_TEMPLATE: ".github/workflows/check-broken-links.md"
@@ -22,7 +22,7 @@ jobs:
     - uses: actions/checkout@v2
       if: failure()
 
-    - uses: JasonEtco/create-an-issue@master
+    - uses: JasonEtco/create-an-issue@main
       env:
         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
       with:
